--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "next": "14.0.4",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
