--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "luxon": "^3.4.4",
     "next": "14.0.4",
     "next-videos": "^1.4.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
